bitfield/tests/fail/invalid-range-bounds.stderr
error: Bitfield range bounds are invalid
 --> tests/fail/invalid-range-bounds.rs:5:17
  |
5 |         a: u8 @ 6..=0,
  |                 ^^^^^
